css/main.css
/* ======= */
/* GENERAL */
/* ======= */

body {
  overflow-x: hidden;
}

.center {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

.embed-responsive {
  height: 450px;
}

@media only screen and (min-width: 768px) {
  .embed-responsive {
    height: 100%;
  }
}

.flex-center {
  display: flex;
  justify-content: center;
}

.red-border {
  background-color: #ff3a3a !important;
  border: 15px solid #ff3a3a !important;
}

.thumbnail {
  max-width: 100%;
  max-height: 100%;
  background-color: transparent;
  border: none;
  margin-bottom: 0;
}

::selection {
  background: #ff8f8f;
}

::-moz-selection {
  background: #ff8f8f;
}

.jumbotron {
  border-radius: 0%;
}

.blur {
  filter: blur(4px) opacity(75%);
}

/* ===== */
/* LINKS */
/* ===== */

a:link, a:visited {
  color: #f00;
}

a:hover, a:active, a:focus {
  color: #900;
}

/* ====== */
/* IMAGES */
/* ====== */

.profile-picture {
  width: 150px;
  height: 150px;
  border-radius: 100%;
  background-image: url("../images/me.jpg");
  background-size: cover;
  border: 5px solid #ff3a3a;
}

/* ========== */
/* NAV BUTTON */
/* ========== */

.nav-toggle {
  position: absolute;
  top: 0.5rem;
  left: 0.5rem;
  width: 40px;
  height: 45px;
  z-index: 10;
  cursor: pointer;
  background: none;
  border: none;
}

.nav-toggle:focus {
  outline: none;
}

.nav-toggle .icon {
  position: absolute;
  top: 20px;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: 32px;
  height: 2px;
  background-color: #333;
  transition: all 0.4s ease-out;
}

.nav-toggle .icon:before, .nav-toggle .icon:after {
  transition: all 0.25s ease-out;
  position: absolute;
  width: 32px;
  height: 2px;
  background-color: #333;
  content: '';
}

.nav-toggle .icon.white, .nav-toggle .icon.white:before, .nav-toggle .icon.white:after {
  background-color: #fff;
}

.nav-toggle .icon:before {
  top: -10px;
  left: 0;
}

.nav-toggle .icon:after {
  top: 10px;
  left: 0;
}

.nav-toggle:hover .icon:before {
  top: -15px;
}

.nav-toggle:hover .icon:after {
  top: 15px;
}

.nav-toggle.open .icon {
  background-color: transparent;
  transition: all 0.4s ease-out;
  transform: rotate(180deg);
}

.nav-toggle.open .icon:before {
  top: 0;
  transform: rotate(45deg);
}

.nav-toggle.open .icon:after {
  top: 0;
  transform: rotate(-45deg);
}

/* ======== */
/* NAV MENU */
/* ======== */

.menu {
  z-index: -1;
  position: absolute;
  margin: 0 auto;
  top: 0;
  left: 0;
  right: 0;
  width: 500px;
  max-width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.menu ul {
  list-style: none;
  height: 0px;
  padding: 0;
  font-size: 2rem;
  text-transform: uppercase;
  overflow: hidden;
  transition: all 0.5s;
  border-bottom: 1px solid transparent;
}

@media only screen and (max-width: 767px) {
  .menu ul {
    font-size: 1.75rem;
  }
}

.menu li:first-child {
  margin-top: 0;
}

.menu li {
  margin: 30px 0;
  padding: 5px 0;
  cursor: pointer;
}

.menu li a {
  display: block;
  color: #212529;
  text-decoration: none;
  letter-spacing: 0.5em;
  padding-left: 0.5em;
}

.menu.active {
  z-index: 2;
}

.menu.active ul {
  height: 600px;
  border-bottom: 1px solid #000;
}

.underline {
  display: block;
  position: relative;
  margin: 0 auto;
  width: 500px;
}

.underline:before, .underline:after {
  position: absolute;
  width: 0;
  height: 2px;
  bottom: 0;
  content: '';
  background: #000;
  transition: 0.2s linear all;
}

.underline:before {
  left: 50%;
}

.underline:after {
  right: 50%;
}

.menu li:hover .underline:before, .menu li:hover .underline:after {
  width: 50%;
  transition: 0.2s linear all;
}

.menu li:nth-child(1) .underline {
  width: 140px;
}

.menu li:nth-child(2) .underline {
  width: 270px;
}

.menu li:nth-child(3) .underline {
  width: 200px;
}

.menu li:nth-child(4) .underline {
  width: 320px;
}

.menu li:nth-child(5) .underline {
  width: 250px;
}

.menu li:nth-child(6) .underline {
  width: 230px;
}

/* ====== */
/* BANNER */
/* ====== */

.banner {
  height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  transition: filter 0.5s;
  border-left: 100vw solid transparent;
  border-bottom: 5vw solid #fff;
  box-sizing: content-box;
  padding-left: 0;
  padding-right: 0;
}

.banner h1 {
  position: absolute;
  top: 45%;
  left: 20%;
}

@media only screen and (min-width: 768px) and (min-height: 768px) {
  .banner h1 {
    font-size: 4em;
  }
}

.banner .fa-chevron-down {
  position: absolute;
  left: 0;
  bottom: 5%;
  display: flex;
  justify-content: center;
  width: 100%;
  transition: 0.5s linear all;
  animation: bounce 2.5s infinite;
  opacity: 0;
  font-size: 3.5rem;
}

.cursor::after {
  content: '|';
  animation: blink 0.5s infinite;
}

.home-bg {
  background-image: url("../images/joshua-sortino-228788.jpg");
}

.projects-bg {
  background-image: url("../images/emile-perron-190221.jpg");
  color: white;
}

.resume-bg {
  background-image: url("../images/joanna-kosinska-478198.jpg");
}

@media only screen and (min-width: 801px) {
  .home-bg {
    background-size: 104% !important; /* so no white is shown when moving bg */
  }
  
  .banner {
    background-attachment: fixed;
  }
}

@media only screen and (max-width: 800px) {
  .home-bg {
    background-position-x: auto;
  }
}

/* ======= */
/* BUTTONS */
/* ======= */

.btn-outline {
  font-weight: 600;
  text-transform: uppercase;
  padding: 10px 19px;
  text-align: center;
  width: 100px;
  display: block;
  font-size: 11px;
  text-decoration: none !important;
  line-height: 100%;
  margin-top: 10px;
  letter-spacing: 0.8px;
  color: #ff3a3a !important;
  transition: all ease-in-out 0.7s;
  background-color: white;
  border: 3px solid #ff3a3a;
  border-radius: 25px;
}

.btn-outline:hover, .btn-outline:focus {
  transition: all ease-in-out 0.7s;
  color: white !important;
  background-color: #ff3a3a;
  cursor: pointer;
}

.btn-clear {
  font-weight: 600;
  text-transform: uppercase;
  padding: 10px 19px;
  text-align: center;
  width: 100px;
  display: block;
  font-size: 11px;
  text-decoration: none !important;
  line-height: 100%;
  margin-top: 10px;
  letter-spacing: 0.8px;
  color: white !important;
  background-color: transparent;
  transition: all ease-in-out 0.7s;
  border: 3px solid white;
  border-radius: 25px;
}

.btn-clear:hover, .btn-clear:focus {
  transition: all ease-in-out 0.7s;
  color: black !important;
  background-color: white;
  cursor: pointer;
}

.btn-view {
  width: 150px;
}

/* ====== */
/* FOOTER */
/* ====== */

footer {
  background-color: #ff3a3a;
  padding-top: 28px;
  padding-bottom: 20px;
  margin-top: 20px;
}

footer p {
  font-weight: bold;
  padding-top: 7px;
}

footer .col-sm {
  display: flex;
  align-items: center;
  justify-content: center;
}

@media only screen and (min-width: 768px) {
  footer .text {
    justify-content: flex-start;
  }
  
  footer .icons {
    justify-content: flex-end;
  }
}

.fa-heart, .fa-circle {
  color: white;
}

.fa-github, .fa-envelope {
  color: black;
}

/* ===== */
/* FORMS */
/* ===== */

input, textarea {
  display: block;
  padding: 5px;
  width: 300px;
  border: none;
  border-bottom: 1px solid #757575;
  max-width: 100%;
  outline: none;
}

textarea {
  min-height: 51px;
  resize: vertical;
}

input:focus ~ .input-bar:before, input:focus ~ .input-bar:after,
textarea:focus ~ .input-bar:before, textarea:focus ~ .input-bar:after {
  width: 50%;
  transition: 0.2s linear all;
}

.input-bar {
  position: relative;
  margin-bottom: 10px;
}

.input-bar {
  display: block;
  position: relative;
  width: 300px;
  max-width: 100%;
}

.input-bar:before, .input-bar:after {
  position: absolute;
  width: 0;
  height: 2px;
  bottom: 0;
  content: '';
  background: #ff3a3a;
  transition: 0.2s linear all;
}

.input-bar:before {
  left: 50%;
}

.input-bar:after {
  right: 50%;
}

.send-btn {
  width: 100px;
}

/* ========== */
/* ANIMATIONS */
/* ========== */

@keyframes blink {
  from {
    opacity: 0;
  } to {
    opacity: 1;
  }
}

@keyframes bounce {
  from {
    margin-top: 0;
  } to {
    margin-top: 25px;
  }
}

/* ============= */
/* SMALL BANNERS */
/* ============= */

.small-banner {
  height: 25vh;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  background-position: center;
  flex-direction: column;
  box-sizing: content-box;
  padding-left: 0;
  padding-right: 0;
}

.small-banner .wrapper {
  position: relative;
  top: 0;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  left: 50vw;
}

.slant {
  width: 100%;
  height: 0px;
}

.slant .thing {
  transform: translateY(-100%);
  border-bottom: 5vw solid white;
  border-left: 100vw solid transparent;
}

.slant .thing2 {
  transform: translateY(-100%);
  border-top: 5vw solid white;
  border-right: 100vw solid transparent;
}

.small-banner h2 {
  margin-bottom: 0;
}

.small-banner.resume-bg {
  border-top: 5vw solid white;
  border-right: 100vw solid transparent;
  margin-bottom: 0px;
}

.small-banner.resume-bg .wrapper {
  top: -20px;
  left: 50vw;
}

.small-banner.resume-bg h2, .small-banner.resume-bg a {
  transform: translateY(-50%);
}

.small-banner.projects-bg {
  border-left: 100vw solid transparent;
  border-bottom: 5vw solid white;
}

.small-banner.projects-bg .wrapper {
  top: 20px;
  left: -50vw;
}

.small-banner.projects-bg h2, .small-banner.projects-bg a {
  transform: translateY(50%);
}

/* ======== */
/* 404 PAGE */
/* ======== */

.banner-404 {
  height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  transition: filter 0.5s;
  margin-bottom: 0;
}

.banner-404 div {
  position: absolute;
  top: 40%;
  left: 20%;
}

@media only screen and (min-width: 768px) and (min-height: 768px) {
  .banner-404 h1 {
    font-size: 4em;
  }
}

/* ===== */
/* OTHER */
/* ===== */

#flash-prompt a, #flash-prompt a:visited {
  color: #00E;
}

#flash-prompt a:hover, #flash-prompt a:active, #flash-prompt a:focus {
  color: #00a;
}

#about-me-p {
  margin-bottom: 30px;
}

#projects .row .col-md-7 {
  padding: 15px;
}

.construction {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 0;
  right: 0;
  margin: 0 auto;
  text-align: center;
  transition: filter 0.5s;
}

.construction h1 {
  margin-bottom: 25px;
}

